--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "description": "hexlet php-package",
   "license": "MIT",
   "scripts": {
-    "test": "phpunit tests"
+    "test": "phpunit tests",
+    "phpcs": "phpcs"
   },
   "autoload": {
     "psr-4": {
@@ -21,7 +22,7 @@
   },
   "require": {
     "tightenco/collect": "^5.6",
-    "nesbot/carbon": "^2.32.2",
+    "nesbot/carbon": "^2.43",
     "symfony/string": "^5.1"
   },
   "require-dev": {
